# idjc-alternate

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  bootstrap  bootstrap.sh  config.h.in  configure  configure.ac  configure.in  env-up  ffmpeg_avcodec.c  idjc.desktop.in  idjc.desktop.in.in  idjc.desktop_  idjc.in  idjc.in.in  idjc_  idjcctrl_.py
Man/: Makefile.am  Makefile.in  idjc.1_  idjcctrl.1_
artwork/: Makefile.am  Makefile.in  add3.xpm  advance.xpm  control_c.xpm  control_k.xpm  control_n.xpm  control_p.xpm  crossout.xpm  del.xpm  greenphone.xpm  icon.xpm  im.xpm  interlude.xpm  ir.xpm  jack2.xpm  led_lit_amber_black_border_64x64.xpm  led_lit_green_black_border_64x64.xpm  led_lit_red_black_border_64x64.xpm  led_unlit_clear_border_64x64.xpm  listenerphones.xpm  logo.xpm  mic4.xpm  mic5.xpm  mic_off.xpm  mic_on.xpm  mic_unshown.xpm  midmark.xpm  next.xpm  note.xpm  pass.xpm  pause.xpm  pbphone.xpm  play2.xpm  play3.xpm  prev.xpm  rec.xpm  redphone.xpm  sm.xpm  speedicon.xpm  (+3 more)
c/: Makefile.am  Makefile.in  agc.c  agc.h  audio_feed.c  audio_feed.h  avcodec_encoder.c  avcodec_encoder.h  avcodecdecode.c  avcodecdecode.h  bsdcompat.c  bsdcompat.h  compressor.c  compressor.h  dbconvert.c  dbconvert.h  dyn_lame.c  dyn_lame.h  dyn_mad.c  dyn_mad.h  dyn_mpg123.c  dyn_mpg123.h  encoder.c  encoder.h  fade.c  fade.h  flacdecode.c  flacdecode.h  gnusource.h  ialloc.c  ialloc.h  id3.c  id3.h  idjcmixer.c  kvpdict.c  kvpdict.h  kvpparse.c  kvpparse.h  lame.h  live_mp2_encoder.c  (+60 more)
doc/: ChangeLog.html  download.html  index.html  jingles.html  output.html  prefs.html  realtime.html  style.css  voip.html
docsrc/: .gitignore  Makefile  Makefile.am  code.html_  code_idjcmon.html_  contact.html_  idjc.css  index.html  index.html_  install.html_  install_build.html_  install_first_run.html_  install_standard.html_  jingles-window.png_  main-window.png_  output-window.png_  prefs-bindings.png_  prefs-channels.png_  prefs-general.png_  prefs-jack-ports.png_  prefs-microphones.png_  prefs-xchat.png_  style.css  style_ie.css  template_head.html__  template_tail.html__  tour.html_  tour_jingles.html_  tour_main.html_  tour_output.html_  tour_preferences.html_  tutorials.html_  tutorials_icecast.html_  tutorials_plugin.html_  tutorials_shoutcast.html_  tutorials_streaming_aac.html_  tutorials_voip.html_
idjcpython/: IDJCcontrols.py  IDJCfree.py  IDJCjingles.py  IDJCmedia.py  IDJCmixprefs.py  IDJCservdialog.py  Makefile.am  Makefile.in  __init__.py  en_GB_text.py  en_US_text.py  idjc_config.py  idjcgui.py  licence_window.py  ln_text.py  p3db.py  sourceclientgui.py  tooltips.py
libshout/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
libshout-idjc/: COPYING  Makefile.am  README  configure.ac  shout-idjc.pc.in
libshout-idjc/include/shoutidjc/: shout.h.in
libshout-idjc/src/: Makefile.am  mpeg.c  ogg.c  shout.c  shout_private.h  speex.c  util.c  webm.c
libshout-idjc/src/avl/: avl.c
libshout-idjc/src/timing/: timing.c
libshout/debian/: Makefile.in
libshout/doc/: Makefile.in
libshout/include/: Makefile.in
libshout/include/shout/: Makefile.am  Makefile.in  shout.h.in
libshout/src/: Makefile.am  Makefile.in  adts.c  mp3.c  mpeg.c  ogg.c  shout.c  shout_ogg.h  shout_private.h  theora.c  vorbis.c
libshout/src/avl/: Makefile.am  Makefile.in
libshout/src/httpp/: Makefile.am  Makefile.in  httpp.c
libshout/src/net/: Makefile.am  Makefile.in  sock.c  sock.h
libshout/src/thread/: Makefile.am  Makefile.in  thread.c
libshout/src/timing/: Makefile.am  Makefile.in
libshout/win32/: Makefile.in
m4/: ChangeLog
man/: Makefile.am  idjc-auto.1_  idjc-ls.1_  idjc-new.1_  idjc-noauto.1_  idjc-rm.1_  idjc-run.1_  idjc.1_  reporting_bugs.part  see_also.part
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  en.po  en_GB.po  it.po
python/: Makefile.am  __init__.py  __init__.py.in.in  config.py.in.in  de_DE_text.py  dialogs.py  en_GB_text.py  format.py  freefunctions.py  gtkstuff.py  idjc-announce.py  irc.py  jingles.py  licence_window.py  ln_text.py  maingui.py  midicontrols.py  mutagentagger.py  oldjingles.py  p3db.py  playergui.py  popupwindow.py  preferences.py  songdb.py  sourceclientgui.py  tooltips.py  utils.py
python/prelims/: Makefile.am  __init__.py  profiledialog.py
