xpms = add3.xpm advance.xpm greenphone.xpm interlude.xpm jack2.xpm led_lit_amber_black_border_64x64.xpm led_lit_green_black_border_64x64.xpm led_lit_red_black_border_64x64.xpm led_unlit_clear_border_64x64.xpm mic4.xpm mic5.xpm next.xpm note.xpm pass.xpm pause.xpm pbphone.xpm play2.xpm play3.xpm prev.xpm rec.xpm redphone.xpm stop.xpm volume2.xpm logo.xpm icon.xpm speedicon.xpm crossout.xpm midmark.xpm listenerphones.xpm

pngs = add3.png advance.png greenphone.png interlude.png jack2.png led_lit_amber_black_border_64x64.png led_lit_green_black_border_64x64.png led_lit_red_black_border_64x64.png led_unlit_clear_border_64x64.png mic4.png mic5.png next.png note.png pass.png pause.png pbphone.png play2.png play3.png prev.png rec.png redphone.png stop.png volume2.png logo.png icon.png speedicon.png crossout.png classic_cross.png mk2_cross.png midmark.png listenerphones.png

used = add3.@EXT@ advance.@EXT@ greenphone.@EXT@ interlude.@EXT@ jack2.@EXT@ led_lit_amber_black_border_64x64.@EXT@ led_lit_green_black_border_64x64.@EXT@ led_lit_red_black_border_64x64.@EXT@ led_unlit_clear_border_64x64.@EXT@ mic4.@EXT@ mic5.@EXT@ next.@EXT@ note.@EXT@ pass.@EXT@ pause.@EXT@ pbphone.@EXT@ play2.@EXT@ play3.@EXT@ prev.@EXT@ rec.@EXT@ redphone.@EXT@ stop.@EXT@ volume2.@EXT@ logo.@EXT@ icon.@EXT@ speedicon.@EXT@ crossout.@EXT@ classic_cross.@EXT@ mk2_cross.@EXT@ midmark.@EXT@ listenerphones.@EXT@

dist_noinst_DATA = ${xpms} ${pngs}
nodist_pkgdata_DATA = ${used}

nodist_pixmaps_DATA = idjc.png
pixmapsdir = ${prefix}/share/pixmaps

idjc.png: icon.png
	@cp $? $@
